# cmdo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: example.cpp
lib/: CMakeLists.txt
lib/src/cmdo/: CmdLineOptions.cpp  CmdLineOptions.h  StringUtil.h
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/cmdo/: CmdLineOptionsTest.cpp  CmdLineOptionsTest.h  StringUtilTest.cpp  StringUtilTest.h
